RESOLVED FIXED 157494
Modern IDB: Prevent the same transaction from being commited/aborted twice
https://bugs.webkit.org/show_bug.cgi?id=157494
Summary Modern IDB: Prevent the same transaction from being commited/aborted twice
Brady Eidson
Reported 2016-05-09 16:14:56 PDT
Modern IDB: Prevent the same transaction from being commited/aborted twice Rarely, due to page navigation or worker shutdown, a transaction might be either committed or aborted after it has already been committed or aborted. I could not reproduce this with a targeted test case attempting to reproduce it, but it is showing up as a source of at least some of the mysterious flakes (https://bugs.webkit.org/show_bug.cgi?id=154968) By detecting this situation and turning it into an explicit error, we'll turn at least some mysterious timeouts into errors that will then become more actionable.
Attachments
Patch (11.84 KB, patch)
2016-05-09 16:23 PDT, Brady Eidson
no flags
Brady Eidson
Comment 1 2016-05-09 16:23:03 PDT
WebKit Commit Bot
Comment 2 2016-05-09 16:59:08 PDT
Comment on attachment 278455 [details] Patch Clearing flags on attachment: 278455 Committed r200598: <http://trac.webkit.org/changeset/200598>
WebKit Commit Bot
Comment 3 2016-05-09 16:59:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.